--- a/docs/_layouts/monthly_archive.html
+++ b/docs/_layouts/monthly_archive.html
@@ -34,7 +34,6 @@ layout: default
           {%- assign song_counter_for_ad = 0 -%}
           {%- assign ad_display_index = 0 -%}
         {%- endif -%}
-
         {% for song in page.songs %}
           <tr data-song-serial="{{ song.serial | escape }}" data-drive-id="{{ song.driveId | escape }}">
             <td>{{ song.name }}</td>
@@ -55,7 +54,6 @@ layout: default
               </div>
            </td>
           </tr>
-
           {%- if inline_ads_config.enabled and ads_list_size > 0 -%}
             {%- assign song_counter_for_ad = song_counter_for_ad | plus: 1 -%}
             {%- if song_counter_for_ad == ad_frequency and forloop.last == false -%}
@@ -63,7 +61,7 @@ layout: default
               <tr class="inline-ad-row">
                 <td class="inline-ad-cell" colspan="4">
                   {%- if ad.type == 'image' -%}
-                    <a href="{{ ad.link_url }}" target="_blank" rel="noopener sponsored" class="inline-ad-link">
+                    <a href="{{ ad.link_url }}" target="_blank" rel="noopener sponsored" class="inline-ad-link inline-ad-link--image">
                       <img src="{{ site.baseurl }}{{ ad.image_url }}" alt="{{ ad.alt_text }}" class="inline-ad-image">
                     </a>
                   {%- else -%}
