--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -22,6 +22,17 @@
   height: 500px;
   position: sticky;
   top: calc(var(--fixed-top-margin) + 20px);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.7s ease-in-out;
+  &.is-visible {
+    opacity: 1;
+    visibility: visible;
+  }
+  &.is-faded {
+    opacity: 0.15;
+    visibility: visible;
+  }
 }
 .ad-banner {
   display: flex;
