בנייה מחדש: הפנייה אוטומטית של דפי האתר לדומיין הראשי

--- a/docs/_layouts/artist.html
+++ b/docs/_layouts/artist.html
@@ -1,5 +1,5 @@
 ---
-layout: default # Inherits from default, which loads core.js, ads.js, search.js, shared-redirect-handler.js
+ # Inherits from default, which loads core.js, ads.js, search.js, shared-redirect-handler.js
 ---
 <div id="loadingMessage" class="loading-message">
   <div class="progress-bar-container">
