--- a/docs/_sass/_pages.scss
+++ b/docs/_sass/_pages.scss
@@ -96,14 +96,16 @@
   background-color: #F8F5FD;
   color: var(--primary-hover);
   padding: 0.6rem 1.5rem;
-  margin-top: 0rem;
-  margin-bottom: 1.5rem;
   border-radius: 6px;
   box-shadow: 0 2px 6px rgba(126, 87, 194, 0.05);
   text-align: center;
   font-size: 1.7em;
   font-weight: 600;
   border: none;
+  display: block;
+  width: 50%;
+  max-width: 700px;
+  margin: 0 auto 1.5rem auto;
 }
 .artist-item {
   display: flex;
