--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -25,6 +25,9 @@
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.7s ease-in-out;
+  &.no-transition {
+    transition: none;
+  }
   &.is-visible {
     opacity: 1;
     visibility: visible;
