--- a/docs/_sass/_responsive.scss
+++ b/docs/_sass/_responsive.scss
@@ -123,7 +123,7 @@
     font-size: 0.98em;
   }
   .inline-ad-row td {
-    padding: 12px 8px !important;
+    padding: 12px 0 !important;
   }
   .inline-ad-row a.inline-ad-link {
     flex-direction: column;
@@ -143,7 +143,6 @@
     width: 160px;
   }
 }
-
 @media (min-width: 769px) {
   .page-main-title {
     width: 70%;
