שיפור: מרכוז הפרסומות

--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -20,7 +20,8 @@
   width: var(--sidebar-width);
   height: 500px;
   position: fixed;
-  top: calc(var(--fixed-top-margin) + 20px);
+  top: 50%;
+  transform: translateY(-50%);
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.7s ease-in-out;
