שיפור: הצגת פרסומות רספונסיבית

--- a/docs/_sass/_responsive.scss
+++ b/docs/_sass/_responsive.scss
@@ -1,6 +1,22 @@
-@media (min-width: 1400px) {
+@media (min-width: 1120px) {
+  .body-wrapper {
+    gap: var(--layout-gap-medium);
+    padding-left: var(--layout-gap-medium);
+    padding-right: var(--layout-gap-medium);
+  }
   .ad-sidebar {
     display: block;
+    width: var(--sidebar-width-medium);
+  }
+}
+@media (min-width: 1600px) {
+  .body-wrapper {
+    gap: var(--layout-gap);
+    padding-left: var(--layout-gap);
+    padding-right: var(--layout-gap);
+  }
+  .ad-sidebar {
+    width: var(--sidebar-width);
   }
 }
 @media (max-width: 1399px) {
