--- a/docs/_sass/_variables.scss
+++ b/docs/_sass/_variables.scss
@@ -16,5 +16,8 @@
   --fixed-top-margin: 10px;
   --scrollbar-track-line-color: rgba(126, 87, 194, 0.2);
   --sidebar-width: 200px;
+  --sidebar-width-medium: 160px;
   --layout-gap: 25px;
+  --layout-gap-medium: 15px;
+  --main-content-min-width: 768px;
 }
