--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -11,7 +11,7 @@
 }
 .main-content-column {
   flex: 1 1 auto;
-  min-width: 0;
+  min-width: var(--main-content-min-width);
   max-width: 1150px;
   width: 100%;
 }
@@ -19,9 +19,9 @@
   display: none;
   width: var(--sidebar-width);
   height: 500px;
-  position: fixed;
-  top: 50%;
-  transform: translateY(-50%);
+  flex-shrink: 0;
+  position: sticky;
+  top: calc(var(--navbar-height) + var(--filter-section-height) + var(--fixed-top-margin) + 1rem);
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.7s ease-in-out;
@@ -36,12 +36,6 @@
     opacity: 0.15;
     visibility: visible;
   }
-}
-.ad-sidebar-right {
-  left: calc(50% + (1150px / 2) + var(--layout-gap));
-}
-.ad-sidebar-left {
-  left: calc(50% - (1150px / 2) - var(--layout-gap) - var(--sidebar-width));
 }
 .ad-banner {
   display: flex;
