--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -53,7 +53,7 @@
 .ad-banner img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 .ad-banner.ad-cta {
   flex-direction: column;
