--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -18,7 +18,6 @@
 .ad-sidebar {
   display: none;
   width: var(--sidebar-width);
-  height: 500px;
   flex-shrink: 0;
   position: sticky;
   top: calc(var(--navbar-height) + var(--filter-section-height) + var(--fixed-top-margin) + 1rem);
@@ -40,22 +39,21 @@
 .ad-banner {
   display: flex;
   width: 100%;
-  height: 100%;
   background-color: transparent;
-  border: none;
-  box-shadow: none;
   border-radius: 12px;
-  overflow: hidden;
   text-decoration: none;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 .ad-banner img {
   width: 100%;
-  height: 100%;
-  object-fit: contain;
+  height: auto;
+  border-radius: 12px;
+  display: block;
 }
 .ad-banner.ad-cta {
+  height: 500px;
+  align-items: center;
   flex-direction: column;
   text-align: center;
   padding: 20px;
