שיפור ותיקון: רספונסיבות מסכי טלפון

--- a/docs/_sass/_responsive.scss
+++ b/docs/_sass/_responsive.scss
@@ -70,7 +70,7 @@
 }
 @media (max-width: 680px) {
   .main-columns { flex-direction: column; gap: 30px; }
-  .artists-column, .songs-column { min-width: unset; padding: 20px; }
+  .artists-column, .songs-column { min-width: unset; padding: 20px; flex: initial; }
   .artists-column h2, .songs-column h2, a.column-title-link { font-size: 1.3em; }
 }
 @media (max-width: 600px) {
@@ -81,8 +81,8 @@
   }
   .body-wrapper {
     padding-top: calc(var(--navbar-height) + var(--filter-section-height) + var(--fixed-top-margin) + 0.5rem);
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
   .fixed-header-wrapper { left: 5px; right: 5px; }
   .header-content-unit { border-radius: 8px; }
