--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -174,6 +174,7 @@
   gap: 40px;
   margin-bottom: 40px;
   flex-wrap: wrap;
+  align-content: flex-start;
 }
 .artists-column, .songs-column {
   flex: 1;
