תיקון: מבנה תוכן ועיצוב

--- a/docs/_layouts/advertise.html
+++ b/docs/_layouts/advertise.html
@@ -24,7 +24,7 @@
         </main>
 
         <footer class="page-footer">
-            <p>&copy; {% now "Y" %} שיר-בוט. כל הזכויות שמורות.</p>
+            <p>&copy; {{ site.time | date: '%Y' }} שיר-בוט. כל הזכויות שמורות.</p>
         </footer>
     </div>
 </body>
