שיפור: מעקב אנליטיקס בדף המודעות

--- a/docs/_layouts/advertise.html
+++ b/docs/_layouts/advertise.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/advertise-page.css">
+    <script src="https://nhlocal.github.io/general-settings.js"></script>
 </head>
 <body>
     <div class="advertise-page-wrapper">
