Docs: Update advertising text in header

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -21,7 +21,7 @@
       </form>
       {% comment %} --- Right Side Icons (From original structure) --- {% endcomment %}
       <div class="icons-container">
-        <a href="{{ site.baseurl }}/advertise/" class="right-item" title="פרסמו אצלנו">
+        <a href="{{ site.baseurl }}/advertise/" class="right-item" title='פרסום באתר - החל מ-50 ש"ח'>
           <i class="fas fa-bullhorn"></i>
         </a>
         <a class="feedback-button feedback-mail-link" data-email="mesader.singelim@gmail.com" data-subject="משוב לאתר שיר-בוט" data-body="שלום,
