עיצוב: שיפור מודעת פרסם כאן - רספונסיביות

--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -52,7 +52,8 @@
   display: block;
 }
 .ad-banner.ad-cta {
-  height: 500px;
+  min-height: 480px;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
