--- a/docs/_sass/_responsive.scss
+++ b/docs/_sass/_responsive.scss
@@ -19,6 +19,28 @@
     width: var(--sidebar-width);
   }
 }
+@media (max-width: 1400px) and (min-width: 1120px) {
+  .ad-banner.ad-cta {
+    padding: 20px;
+  }
+  .ad-cta-icon {
+    width: 60px;
+    height: 60px;
+    font-size: 2.1em;
+    margin-bottom: 15px;
+  }
+  .ad-cta-title {
+    font-size: 1.3em;
+  }
+  .ad-cta-text {
+    font-size: 0.95em;
+    margin-bottom: 20px;
+  }
+  .ad-cta-button {
+    padding: 10px 25px;
+    font-size: 0.95em;
+  }
+}
 @media (max-width: 1399px) {
   .fixed-header-wrapper {
     padding: 0 15px;
